# 19.2-Django

./: catalog.json  groups.json  pyproject.toml
blogs/: admin.py  models.py  urls.py  views.py
blogs/management/commands/: work_with_db.py
blogs/migrations/: 0001_initial.py  0002_alter_blogpost_slug.py
blogs/templates/blog_pages/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  blog_main_page.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  blogpost_main_page.html
blogs/templates/blog_pages/includes/: inc_menu.html
blogs/templates/blogs/: blogpost_detail.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: work_with_db.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_product_views_counter.py  0003_alter_product_category.py  0004_version.py  0005_alter_product_description.py  0006_alter_version_options_alter_product_description_and_more.py
catalog/templates/: contacts.html  goods.html  home.html  product.html  product_list.html
catalog/templates/catalog/: goods.html  home.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html  user_password_reset.html  user_password_set_new.html
