[tool.poetry]
name = "19-2-django"
version = "0.1.0"
description = ""
authors = ["Maxim Talancev <maxtalwork@gmail.com>"]
readme = "README.md"
packages = [{include = "19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
