[tool.poetry]
name = "19-2-django"
version = "0.1.0"
description = ""
authors = ["Maxim Talancev <maxtalwork@gmail.com>"]
readme = "README.md"
packages = [{include = "19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
black = "^24.4.2"
pillow = "^10.3.0"
ipython = "^8.25.0"
static = "^1.1.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "catalog.settings"
