[tool.poetry]
name = "19-2-django"
version = "0.1.0"
description = ""
authors = ["Maxim Talancev <maxtalwork@gmail.com>"]
readme = "README.md"
packages = [{include = "19"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
pillow = "^10.3.0"
ipython = "^8.25.0"
pytils = "^0.4.1"
psycopg2 = "^2.9.9"
django = "4.2.2"
psycopg2-binary = "^2.9.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "catalog.settings"
